# BlueSky-EarthScientists

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: classify.md  evaluate.md  find-bots.md  review-candidates.md
bsky-list-manager/: .env.example  .gitignore  pyproject.toml
bsky-list-manager/.claude/commands/: list-stats.md
bsky-list-manager/src/bsky_geo/: __init__.py  bsky_client.py  cli.py  crawler.py  data_store.py  evaluator.py  review_ui.py
